--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <p>My First Coding Challenge: Step 5</p>
 <h2>This is the second heading</h2>
 <p>This is the second paragraph</p>
+<img src="website/IMG-20171006-WA0009" alt="Watercolour Tattoo of an Elephant" />
 </body>
 </html>
