--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 <h2>This is the second heading</h2>
 <p>This is the second paragraph</p>
 <img src="tattoo.jpg" width="250" height="250" alt="Watercolour Tattoo of an Elephant">
+<p><a href="images.html">Favourite Images</a></p>
 </body>
 </html>
