--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>First Website</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="First Website Trial Run">
+	<link rel="stylesheet" href="./my_styles.css" />
 </head>
 <body>
 <h1>My First Website</h1>
