--- a/images.html
+++ b/images.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="my_styles" href="my_style.css">
 	<title>Images</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="Favorite Images">
+	<link rel="stylesheet" href="./my_styles.css" />
 </head>
 <body>
 <h1>Images</h1>
